Bug 248216 - [Linuxulator]: linprocfs: Steam, Valve Anti-Cheat and /proc/<pid>/maps formatting.
Summary: [Linuxulator]: linprocfs: Steam, Valve Anti-Cheat and /proc/<pid>/maps format...
Status: Closed FIXED
Alias: None
Product: Base System
Classification: Unclassified
Component: kern (show other bugs)
Version: 12.1-RELEASE
Hardware: amd64 Any
: --- Affects Only Me
Assignee: Edward Tomasz Napierala
URL:
Keywords:
Depends on:
Blocks: 247219
  Show dependency treegraph
 
Reported: 2020-07-23 17:47 UTC by Alex S
Modified: 2023-02-21 11:29 UTC (History)
4 users (show)

See Also:


Attachments
that single space patch (373 bytes, patch)
2020-07-23 17:47 UTC, Alex S
no flags Details | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Alex S 2020-07-23 17:47:22 UTC
Created attachment 216717 [details]
that single space patch

With some popular multiplayer games (such as Counter-Strike: Global Offensive) the Linux Steam client likes to occasionally scan the game process memory, presumably as part anti-cheat measures. Turns out the client also expects each inode entry to be followed by a space character, otherwise the parsing code crashes.

The other related issue is that mapping information often doesn't fit into the pseudofs (?) 128 Kib limit, which results in a truncated map file. That occasionally leads to a Steam crash as well (depends on the exact truncation point).
Comment 1 commit-hook freebsd_committer freebsd_triage 2020-10-15 12:49:09 UTC
A commit references this bug:

Author: trasz
Date: Thu Oct 15 12:48:31 UTC 2020
New revision: 366722
URL: https://svnweb.freebsd.org/changeset/base/366722

Log:
  With some popular multiplayer games (such as Counter-Strike: Global
  Offensive) the Linux Steam client likes to occasionally scan the game
  process memory, presumably as part anti-cheat measures. Turns out
  the client also expects each inode entry to be followed by a space
  character, otherwise the parsing code crashes.

  PR:		248216
  Submitted by:	Alex S <iwtcex@gmail.com>
  MFC after:	2 weeks

Changes:
  head/sys/compat/linprocfs/linprocfs.c
Comment 2 Edward Tomasz Napierala freebsd_committer freebsd_triage 2020-10-15 12:50:04 UTC
(See also https://reviews.freebsd.org/D20575)
Comment 3 Dmitry Chagin freebsd_committer freebsd_triage 2023-02-21 10:28:42 UTC
(In reply to Edward Tomasz Napierala from comment #2)
I think it could be closed as fixed, ok?
Comment 4 Alex S 2023-02-21 11:29:00 UTC
This issue is definitely fully addressed.