With some popular multiplayer games (such as Counter-Strike: Global Offensive) the Linux Steam client likes to occasionally scan the game process memory, presumably as part anti-cheat measures. Turns out the client also expects each inode entry to be followed by a space character, otherwise the parsing code crashes.

PR:		248216
Submitted by:	Alex S <iwtcex@gmail.com>
MFC after:	2 weeks


git-svn-id: svn+ssh://svn.freebsd.org/base/head@366722 ccf9f872-aa2e-dd11-9fc8-001c23d0bc1f